Fix vertical overflow

--- a/src/style.css
+++ b/src/style.css
@@ -27,6 +27,7 @@ input[type="number"] {
 
 .katex-display {
   overflow-x: auto;
+  padding: 5px 0;
 }
 
 .katex-display > .katex > .katex-html > .tag {
